--- a/form1/style.css
+++ b/form1/style.css
@@ -47,11 +47,15 @@ header p {
 
 form {
     width: 750px;
-    height: 1084px;
+    height: auto;
     background: #FFFFFF;
     border-radius: 20px 20px 0px 0px;
     margin-top: 58px;
     padding: 64px;;
+
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 fieldset {
@@ -74,6 +78,10 @@ fieldset legend {
     width: 100%;
     padding-bottom: 16px;
     border-bottom: 1px solid #E6E6F0;
+}
+
+.legend-no-border {
+    border-bottom: none;
 }
 
 .input-wrapper {
@@ -112,4 +120,59 @@ fieldset legend {
     line-height: 20px;
     color: #535971;
     font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+}
+
+input:invalid{
+    border: 1px solid red;;
+}
+
+.col-3 {
+    display: flex;
+    gap: 32px;
+}
+
+.col-3 > div:nth-child(1) {
+    width: 300px;
+}
+
+.col-2 {
+    display: flex;
+    gap:10px;
+
+}
+
+.col-2 > div {
+    width: 140px;
+}
+
+footer {
+    width: 750px;
+    height: 160px;
+    background-color: #535971;
+    border-radius: 0px 0px 20px 20px;
+    margin-bottom: 366px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    background: #FF5374;
+    border-radius: 20px;
+    border: none;
+    padding: 15px 40px;
+    width: 608px;
+
+    font-family: 'Staatliches', cursive;
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color:#f52b53; ;
 }
